Add watsonx gpt-oss mode.

--- a/env.template
+++ b/env.template
@@ -41,3 +41,12 @@ LANGSMITH_PROJECT=pr-smug-tension-10
 
 # -- Huggingface --
 HUG_EMBE_MODEL_NAME=intfloat/multilingual-e5-small
+
+# --- watsonx ---
+# Create the API key via IBM Cloud Tech Zone under “Manage → Access (IAM) → API Keys.”
+# For the Watsonx project ID and url, please refer to the curl command in Prompt Lab. You can also view project ID in the “Projects → Management” tab on watsonx.ai.
+
+WATSONX_GPT_OSS=False
+WATSONX_API_KEY=***
+WATSONX_PROJECT_ID=***
+WATSONX_BASE_URL=https://us-south.ml.cloud.ibm.com/ 
