--- a/src/routers/utils/prompts_ja.yaml
+++ b/src/routers/utils/prompts_ja.yaml
@@ -4,11 +4,18 @@ select_tool: |
   # 指示
   {plan}
 
+  # 重要: ツール呼び出しの方法
+  - 標準のfunction calling形式でツールを呼び出してください
+  - JSON形式やテキスト形式で返答しないでください
+  - 直接ツールを実行してください
+
   # 注意事項
-  - 上の指示の中に明確にツール名が書いてある場合は、そのツールを呼んでください。
-  - 質問をしてはいけません。また、contentにメッセージを書いてはいけません。
-  - 呼ぶべきツールが不明の場合は以下の「使用可能なツールの情報」をもとに呼ぶツールを選択してください。ここに記載されているツールの特性を見て、ツールを使用するようにしてください。検索が必要なのか、それ以外の作業が必要なのかをまず考えてください。それでも不明の場合は、ans_llm_baseを呼んでください。
-  - 「検索ツール」は検索以外の目的で呼び出してはいけません。
+  - 上の指示の中に明確にツール名が書いてある場合は、そのツールを呼んでください
+  - 質問やメッセージは不要です
+  - 呼ぶべきツールが不明の場合は以下の「使用可能なツールの情報」をもとに選択してください
+  - 検索が必要か、それ以外の作業が必要かをまず判断してください
+  - 不明な場合は ans_llm_base を呼んでください
+  - 「検索ツール」は検索以外の目的で呼び出してはいけません
 
   # 使用可能なツールの情報
   {tool_info}
